feat: Add list orders endpoint, change /coffee to /coffees url-group
